# genbb2root

./: .gitignore  CMakeLists.txt  README.md  genbb2root.cxx  genbb2root.sh
conf/: genbb-bg.def  genbb-dbd.def  genbb.conf
scripts/: energy_spectrum.cc
